--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <!-- <img src="/assets/img/my-passport-photo-square.jpg" class="circle img-responsive profile-pic" alt="avatar"> -->
+          <img src="/assets/img/Travis.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -159,8 +159,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Travis Evashkevich</a><span class="black-text">Technical Artist</span>
     </div>
   </nav>
 
@@ -210,29 +209,22 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Travis Evashkvelinkich.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who loves solving a very complex, very challenging real-world problems.</h5>
+              <h5>Creating tools to fight the dreaded "clicks" in the artist's workflow (and anyone else that asks)</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="https://www.linkedin.com/in/tevashkevich/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/TravisEvashkevich/" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
               </a>
-
-              <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a>
-
               <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
