--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Travis Evashkvelinkich.</span></h2>
+              <h2>Hi, I'm <span class="teal">Travis Evashkevich.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Creating tools to fight the dreaded "clicks" in the artist's workflow (and anyone else that asks)</h5>
@@ -254,12 +254,14 @@
         </blockquote> -->
         <p>
           
-          I am a Software Developer with 1 year of professional experience in Machine Learning, Computer Vision with a willingness to learn and master Software Development, Backend Development. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision. 
-          <!-- Detail-oriented Software Engineer with a get-it-done, on-time, and high-quality product spirit and a keen interest in Software Development and Artificial Intelligence. -->
+          I am a Technical Artist in the Games Industry that supports teams of artists to enable them to do work without worrying about the monontonous busy work of their job. I aim to lessen the amount of clicks and "monkey work" that is involved in day to day work. This generally means making tools/scripts that will handle as much work as possible in as few clicks as possible.
         </p>
+
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          
+          Creating tools that can feed data into each other to achieve the desired end result is my day to day. Aiming to make tools as reusable across projects and Digital Content Creation packages is a goal that I chase.
         </p>
+
         <!-- <p>
           Another Paragraph
         </p>  -->
@@ -285,45 +287,54 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.electricsquare.com" target="_blank"><img alt="Electric Square Logo"
+                    src="/assets/img/EelctricSquare_logo_square_Black.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="http://electricsquare.com" target="_blank"
+                      class="teal-text hoverline">Electric Square</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">AI Developer</div>
+            <div class="role brown-text text-darken-2">Technical Artist</div>
             <ul>
               <li>
-                Improved an in-production optimization algorithm which reduced the cycle-time of the automation process.
+               Created Vehicle Pipeline for <a href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview">Hot Wheels id</a> using 3dsmax (maxscript), Zbrush (zscript), Substance Painter and Unity (C#)
               </li>
               <li>
-                Expanded and modularized the algorithm from one system one robot to a multi-system multi-robot paradigm.
+                <b>Shader work (Unity):</b>
+                <ul>
+                  <li>Wheel Shader that allowed for input of a channel packed texture to define different colour masks + text, Wheel shadowing (for shadows due to wheelwell and ground shadowing)
+                  </li>
+                  <li>
+                    Hologram Shader that allows for customization of hologram images in game with channel packed textures that allowed for editor control of timing for fades and other effects
+                  </li>
+                </ul>
+              <li>
+                <b>Unity Scripting</b>
+                <ul>
+                  <li>
+                    Import script that handled 95% of work related to importing and setting up a vehicle in engine from created assets. This would trawl our source art folder, find any missing models or textures and import, setup folder structures, create and apply materials with correct naming convention with no needed input from a user
+                  </li>
+                  <li>
+                    Scripts to help aid in work such as Quick Load/Unload of wheel assets on cars<br>Material Creation: if extra materials were needed, this would make them and name them correctly 
+                  </li>
+                </ul>
               </li>
               <li>
-                Designed and developed a Video Analytics application that tracks the activity and location of each human
-                in a multi-camera environment
-                along with detailed visualization - from scratch.
-              </li>
-              <li>Improved the speed of the Video Analytics application by incorporating the YOLOv3 model for object
-                detection and DeepSORT for
-                multi-object tracking.</li>
-              <li>
-                <b>Tools:</b> Python, OpenCV, Keras, Tensorflow, PyTorch
+                <b>Tools:</b> Python, Pymxs, Maxscript, HLSL, C#(Unity), 
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Dec 2017 - Current | Brighton, United Kindgom</span>
           </div>
         </div>
 
         <!-- Experience 2 -->
-        <div class="card">
+<!--         <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
@@ -332,7 +343,6 @@
 
               </div>
 
-              <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.mtag.in" target="_blank"
@@ -361,7 +371,7 @@
           <div class="card-action">
             <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
           </div>
-        </div>
+        </div> -->
 
         <!-- Experience 3 -->
         <!-- <div class="card">
@@ -928,7 +938,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "ML Enthusiast", "Fast Learner"],
+      strings: ["Technical Artist", "Candy Maker", "3d Maker", "Fire-Fighting-Ninja"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
