Testing Projects Area

--- a/index.html
+++ b/index.html
@@ -299,34 +299,7 @@
               </div>
             </div>
             <div class="role brown-text text-darken-2">Technical Artist</div>
-            <ul>
-              <li>
-               Created Vehicle Pipeline for <a href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview">Hot Wheels id</a> using 3dsmax (maxscript), Zbrush (zscript), Substance Painter and Unity (C#)
-              </li>
-              <li>
-                <b>Shader work (Unity):</b>
-                <ul>
-                  <li>Wheel Shader that allowed for input of a channel packed texture to define different colour masks + text, Wheel shadowing (for shadows due to wheelwell and ground shadowing)
-                  </li>
-                  <li>
-                    Hologram Shader that allows for customization of hologram images in game with channel packed textures that allowed for editor control of timing for fades and other effects
-                  </li>
-                </ul>
-              <li>
-                <b>Unity Scripting</b>
-                <ul>
-                  <li>
-                    Import script that handled 95% of work related to importing and setting up a vehicle in engine from created assets. This would trawl our source art folder, find any missing models or textures and import, setup folder structures, create and apply materials with correct naming convention with no needed input from a user
-                  </li>
-                  <li>
-                    Scripts to help aid in work such as Quick Load/Unload of wheel assets on cars<br>Material Creation: if extra materials were needed, this would make them and name them correctly 
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <b>Tools:</b> Python, Pymxs, Maxscript, HLSL, C#(Unity), 
-              </li>
-            </ul>
+             Creating pipeline and tools for our in house use and clients. This can range from documentation, training to use tools and software, creating end to end scripts and DCC tooling as well as stand alone scripts that help speed up work, whether it's syncing assets or creating them I aim to speed it up with consistency and less monontony.
           </div>
           <div class="card-action">
             <span>Dec 2017 - Current | Brighton, United Kindgom</span>
@@ -423,13 +396,13 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Hot Wheels id Logo" src="/assets/img/hotwheelsid.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator teal-text hoverline">Hot Wheels id<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A music streaming web app based on Django
+                  Vehicle Pipeline for content creation
                 </p>
               </div>
               <div class="card-reveal">
@@ -437,24 +410,44 @@
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
-
-
-                </ul>
+                  <ul>
+                      <li>
+                       Created Vehicle Pipeline for using 3dsmax (maxscript), Zbrush (zscript), Substance Painter and Unity (C#)
+                      </li>
+                      <li>
+                        <b>Shader work (Unity):</b>
+                        <ul>
+                          <li>Wheel Shader that allowed for input of a channel packed texture to define different colour masks + text, Wheel shadowing (for shadows due to wheelwell and ground shadowing)
+                          </li>
+                          <li>
+                            Hologram Shader that allows for customization of hologram images in game with channel packed textures that allowed for editor control of timing for fades and other effects
+                          </li>
+                        </ul>
+                      <li>
+                        <b>Unity Scripting</b>
+                        <ul>
+                          <li>
+                            Import script that handled 95% of work related to importing and setting up a vehicle in engine from created assets. This would trawl our source art folder, find any missing models or textures and import, setup folder structures, create and apply materials with correct naming convention with no needed input from a user
+                          </li>
+                          <li>
+                            Scripts to help aid in work such as Quick Load/Unload of wheel assets on cars<br>Material Creation: if extra materials were needed, this would make them and name them correctly 
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <b>Tools:</b> Python, Pymxs, Maxscript, HLSL, C#(Unity), 
+                      </li>
+                  </ul>
+                  <a href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview">Hot Wheels id</a> 
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
+                  <!-- <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
+                      class="fa fa-github"></i></a> -->
                 </div>
               </div>
             </div>
