--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                           <li>Wheel Shader that allowed for input of a channel packed texture to define different colour masks + text, Wheel shadowing (for shadows due to wheelwell and ground shadowing)
                           </li>
                           <li>
-                            Hologram Shader that allows for customization of hologram images in game with channel packed textures that allowed for editor control of timing for fades and other effects
+                            Hologram Shader that allows for customization of hologram images in game with channel packed textures that allowed for editor control of timing for fades and otheWr effects
                           </li>
                         </ul>
                       <li>
@@ -435,19 +435,15 @@
                         </ul>
                       </li>
                       <li>
-                        <b>Tools:</b> Python, Pymxs, Maxscript, HLSL, C#(Unity), 
+                        <b>Tools/Languages</b> Python, Zscript, Maxscript, HLSL, C#(Unity)
                       </li>
                   </ul>
-                  <a href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview">Hot Wheels id</a> 
                 <div class="card-action">
                   <a aria-label="Visit " href="https://hotwheels.mattel.com/shop/en-us/hw/Hot-Wheels-id-Overview" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <!-- <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a> -->
+
                 </div>
               </div>
             </div>
@@ -481,10 +477,7 @@
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
+
                 </div>
               </div>
             </div>
