Another attempt to fix button

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Travis Evashkevich.</span></h2>
+              <h2>Hi, I'm <span>Travis Evashkevich.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Creating tools to fight the dreaded "clicks" in the artist's workflow (and anyone else that asks)</h5>
@@ -744,7 +744,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Technical Artist", "Candy Maker", "3d Maker", "Fire-Fighting-Ninja"],
+      strings: ["Pipeline Technical Artist", "Candy Maker", "3d Maker", "Fire-Fighting-Ninja"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
