--- a/index.html
+++ b/index.html
@@ -252,12 +252,14 @@
                   <li>Implemented Zscript for the tool based on the specifications from <a target="_blank" href="https://polyjunky.xyz">Francis-Xavier Martins (PolyJunky)</a></li>
                   <li>Allows you to get controllable, but not final topology, using polypaint, masking or slicing. </li>
                   <li>Gives clean extractions without jagged edges.</li>
-                  <li>Easy to use UI</li>
+                  <li>Easy to use UI and highly rated on Artstaion Marketplace</li>
+                  <li><a target="_blank" href="https://www.artstation.com/marketplace/p/2kAb/eazyremesh-tool-a-retopology-plugin-for-zbrush">See it in action!</a></li>
+
                   <li><b>Tools/Languages:</b>ZBrush, Zscript</li>
                 </ul>
                 <div class="card-action" style="position: sticky;">
                   <a aria-label="Visit " href="https://polyjunky.xyz/store/2kAb/eazyremesh-tool-a-retopology-plugin-for-zbrush" target="_blank" data-position="top"
-                    data-tooltip="View Online"
+                    data-tooltip="Go To Store"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
                 </div>
@@ -523,7 +525,7 @@
         </div>
       </div>
     </section>
-    <!-- Third Section: Experience -->
+    <!-- Experience -->
     <section id="experience" class="section scrollspy">
       <h3 class="page-title white-text teal">Experience</h3>
       <div class="container">
@@ -640,7 +642,7 @@
       </div>
     </section>
 
-    <!-- Fifth Section: Skills -->
+    <!--  Skills -->
     <section id="skills" class="section scrollspy">
       <h3 class="page-title white-text teal">Skills</h3>
       <div class="container">
@@ -712,6 +714,7 @@
 
       </div>
     </section>
+
     <!-- CREDITS -->
     <section id="credits" class="section scrollspy">
       <h3 class="page-title white-text teal">Credits</h3>
@@ -762,7 +765,8 @@
         </div>
       </div>
     </section>
-    <!-- Seventh Section: Education -->
+
+    <!-- Education -->
     <section id="education" class="section scrollspy">
       <h3 class="page-title white-text teal">Education</h3>
       <div class="container">
@@ -788,7 +792,7 @@
     </section>
 
 
-    <!-- Second Section: About -->
+    <!-- About -->
     <section id="about" class="section scrollspy">
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">
@@ -804,7 +808,7 @@
       </div>
     </section>
 
-    <!-- Eight Section: Contact -->
+    <!-- Contact -->
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
