Update DAE logo Add hover state for cards

--- a/index.html
+++ b/index.html
@@ -569,10 +569,36 @@
               </div>
             </div>
             <div class="role brown-text text-darken-2">Assistant Technical Director (ATD)</div>
-            <p>Assisted in creating tools and scripts for various DCC programs such as Autodesk Maya, Clarisse and Houdini for the film Avengers: Infinity War.</p>
+            <p>Assisted in creating tools and scripts for various DCC programs such as Autodesk Maya, Clarisse and Houdini for the film Avengers: Infinity War. This also involved QC of new
+              scripts/tools/tech from the R&D department before they were released widely to the various shows.
+            </p>
           </div>
           <div class="card-action">
             <span>Feb 2017 - Dec 2017 | London, United Kindgom</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="http://www.digitalartsandentertainment.com//" target="_blank"><img alt="DAE Logo"
+                    src="/assets/img/DAE.png" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="http://www.digitalartsandentertainment.com/" target="_blank"
+                      class="teal-text hoverline">DAE</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Community Manager / International Recruiter</div>
+            <p>At Digital Arts and Entertainment I was the Community Manager and an International Recruiter. This meant that I was focused on providing a bridge between Students and Faculty. 
+              I also continued running the Study Night group that I started as a student which runs weekly on campus (and still does). As a Recruiter I was tasked with visiting high schools around the world,
+            but with a focus on Canada. </p>
+          </div>
+          <div class="card-action">
+            <span>Sept 2015 - July 2016 | Kortrijk, Belgium (Remote Work)</span>
           </div>
         </div>
         <div class="card">
@@ -591,7 +617,8 @@
               </div>
             </div>
             <div class="role brown-text text-darken-2">Technical Artist / Intern Tool Developer</div>
-            <p>Started as intern for final year placement in Digital Arts And Entertainment. Came back later to help do some level prep work. </p>
+            <p>Started as intern for final year placement in Digital Arts And Entertainment. During my internship I was able to help streamline the in house tools as well as 
+              create documentation and suggest new ways to implement reusable vfx in the in house engine. In 2015 I came back to help with level setup and dressing. </p>
           </div>
           <div class="card-action">
             <span>Feb 2014 - June 2014, April 2015 - July 2015 | Kortrijk, Belgium (Remote Work)</span>
@@ -840,10 +867,10 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pipeline Technical Artist", "Candy Maker", "3d Maker", "Fire-Fighting-Ninja"],
+      strings: ["Pipeline Technical Artist", "Coffee Roaster", "3d Maker", "Fire-Fighting-Ninja"],
       loop: true,
-      typeSpeed: 80,
-      backSpeed: 40
+      typeSpeed: 30,
+      backSpeed: 20
     });
   </script>
 
