Update Howest times add images

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             but with a focus on Canada. </p>
           </div>
           <div class="card-action">
-            <span>Sept 2015 - July 2016 | Kortrijk, Belgium (Remote Work)</span>
+            <span>Sept 2014 - July 2015 | Kortrijk, Belgium (Remote Work)</span>
           </div>
         </div>
         <div class="card">
@@ -680,6 +680,9 @@
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pyside.png" class="responsive-img" />PySide
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/pymxs.png" class="responsive-img" />Pymxs
