--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
         <!-- <a aria-label="Open Travis's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-
-
-<!--       TODO: RESUME STUFF  <a aria-label="Open Travis's resume in a new tab" href="https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>   -->
+       <a aria-label="Open Travis's resume in a new tab" href="https://drive.google.com/file/d/1Ay7em2bg_WCGGz4qCXhHEVX3tESAi3NS/view?usp=sharing" target="_blank"
+        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
   </nav>
@@ -185,7 +183,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Travis's Resume in a new tab"
-          href="FILL ME IN" target="_blank"
+          href="https://drive.google.com/file/d/1Ay7em2bg_WCGGz4qCXhHEVX3tESAi3NS/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
